# HF-Hub-Ecosystem

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  demo.py  pmat.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
.pmat/: project.toml
docs/: capstone.md  course-introduction.md  outline.md
docs/qa/: demo-falsification-100pt-checklist.md  final-capstone-falsification.md
docs/readings/: exploring-huggingface-with-colab.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: demo-repo.md
examples/: quickstart.py
notebooks/course1/week1/: 1.3-exploring-hub.ipynb  1.7-dataset-exploration.ipynb
notebooks/course1/week2/: 2.2-text-pipelines.ipynb  2.5-custom-inference.ipynb  2.8-multi-gpu.ipynb
notebooks/course1/week3/: 3.2-image-classification.ipynb  3.4-whisper-transcription.ipynb  3.6-image-captioning.ipynb  3.8-capstone-multimodal-analyzer.ipynb
notebooks/course2/week1/: 1.2-loading-datasets.ipynb  1.7-custom-dataset.ipynb
notebooks/course2/week2/: 2.3-first-finetuning.ipynb  2.5-custom-metrics.ipynb  2.7-experiment-tracking.ipynb
notebooks/course2/week3/: 3.2-comprehensive-eval.ipynb  3.4-nlg-evaluation.ipynb  3.7-publish-model.ipynb
src/hf_ecosystem/: __init__.py
src/hf_ecosystem/data/: __init__.py  preprocessing.py  streaming.py
src/hf_ecosystem/hub/: __init__.py  cards.py  search.py
src/hf_ecosystem/inference/: __init__.py  device.py  pipelines.py
src/hf_ecosystem/training/: __init__.py  metrics.py  trainer.py
tests/: __init__.py  conftest.py
tests/notebooks/: __init__.py
tests/unit/: test_cards.py  test_device.py  test_metrics.py  test_pipelines.py  test_preprocessing.py  test_search.py  test_streaming.py  test_trainer.py
