[project]
name = "hf-hub-ecosystem"
version = "1.0.0"
description = "Hugging Face Hub and Ecosystem Fundamentals - Courses 1-2"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "PAIML Research Team" }
]

dependencies = [
    # Core HuggingFace
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.0",
    "accelerate>=0.28.0",
    "huggingface-hub>=0.22.0",

    # Tokenization
    "tokenizers>=0.15.0",
    "sentencepiece>=0.2.0",

    # Multi-modal
    "Pillow>=10.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",

    # Notebooks
    "jupyterlab>=4.1.0",
    "ipywidgets>=8.1.0",

    # Experiment tracking
    "tensorboard>=2.16.0",

    # Utilities
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "nbval>=0.11.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_ecosystem"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["hf_ecosystem"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/__pycache__", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
